# graphic-coloring-engine

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
graphic_coloring_engine/: core.py
tests/: __init__.py  test_color_utils.py  test_graphic_coloring_engine.py  test_layout.py
tests/snapshots/: snap_test_layout.py
