[tool.poetry]
name = "graphic-coloring-engine"
version = "0.1.0"
description = ""
authors = ["filosfino <github@filosfino.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sympy = "^1.8"
Shapely = "^1.7.1"
colormath = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
